# Named-Entity-Recognition

./: README.md  pyproject.toml  requirements.txt
ICDAR/src/: extract_zip_files.ipynb
ICDAR/src/experiment_one_receipt/: experiment_preprocessing.ipynb  experiment_regex.ipynb
ICDAR/src/experiments/: classify_dataset_model.ipynb  mlp copy.ipynb  mlp.ipynb  regex.ipynb
ICDAR/src/functions/: __init__.py  add_to_file.py  apply_bert.py  fields_adapt.py  fields_extract.py  image_preprocessing.py
MIDD/src/: extract_zip_files.ipynb
MIDD/src/functions/: create_model.py  split_dataset.py
MIDD/src/models/layout1_dataset/: BiLSTM_CRF.ipynb  LSTM_CRF.ipynb
MIDD/src/models/layout2_dataset/: BiLSTM_CRF.ipynb  LSTM_CRF.ipynb
MIDD/src/models/layout3_dataset/: BiLSTM_CRF.ipynb  LSTM_CRF.ipynb
MIDD/src/models/layout4_dataset/: BiLSTM_CRF.ipynb  LSTM_CRF.ipynb
MITMovie/src/functions/: create_model.py  split_dataset.py
MITMovie/src/models/: 2BiLSTM.ipynb  BiLSTM.ipynb  BiLSTM_CRF.ipynb  LSTM.ipynb  LSTM_CRF.ipynb
MITRestaurant/src/functions/: create_model.py
MITRestaurant/src/models/: 2BiLSTM.ipynb  BiLSTM_.ipynb  BiLSTM_CRF.ipynb  LSTM.ipynb  LSTM_CRF.ipynb
src/functions/: image_preprocessing.py
src/one_receipt_experiment/: experiment_regex.ipynb
src/train_models/: regex.ipynb
