[tool.poetry]
authors = [""]
description = ""
name = ""
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^9.0.1"
ipykernel = "^6.9.1"
opencv-python = "^4.5.5"
pytesseract = "^0.3.9"
python = "^3.8"
pytz = "^2021.3"
tesseract = "^0.1.3"
pyenchant = "^3.2.2"
pytorch-pretrained-bert = "^0.6.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pre-commit = "^2.15.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.black]
color = true
line-length = 88
target-version = ["py38"]

[tool.isort]
atomic = true
include_trailing_comma = true
multi_line_output = 3
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
error_summary = true
implicit_reexport = false
no_implicit_optional = true
plugins = ["pydantic.mypy"]
pretty = true
python_version = 3.8
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true
